--- a/css/styles.css
+++ b/css/styles.css
@@ -167,7 +167,7 @@ body {
 .contacts-icon{
   fill: var(--text-color);
 
-  transition: var(--animation);
+  transition: fill var(--animation);
   
 }
 
@@ -431,7 +431,7 @@ transition: fill var(--animation);
   border: 1px solid var(--social-icon-cl);
   border-radius: 4px;
 
-  transition: var(--animation);
+  transition: border-color var(--animation);
 }
 
 .client-link{
@@ -509,25 +509,39 @@ transition: fill var(--animation);
   
 }
 
-.photo-link{
+.portfolio-thumb{
   position: relative;
+  overflow: hidden;
 }
 
-.img-description{
-position: absolute;
-top: 50%;
-left: 50%;
-transform: translate(-50%, -50%);
+.overlay{
+  position: absolute;
+  top: 0;
+  left: 0;
 
-width: 100%;
-height: 100%;
+  width: 100%;
+  height: 100%;
 
-font-size: 18px;
-line-height: calc(28 / 18);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 24px;
+  
+  background-color: var(--overlay-cl);
 
-color: var(--white-color);
+  transform: translateY(100%);
+  transition: transform var(--animation);
+}
 
-opacity: 0;
+.portfolio:hover .overlay{
+  transform: translateY(0);
+}
+
+.img-desc{
+  font-size: 18px;
+  line-height: calc(28 / 18);
+
+  color: var(--white-color);
 }
 
 .port-txt{
