--- a/css/styles.css
+++ b/css/styles.css
@@ -326,9 +326,11 @@ fill: var(--accent-color);
   bottom: 0;
   left: 0;
   width: 100%;
+  height: 70px; 
 
-  padding-top: 27px;
-  padding-bottom: 27px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   
   font-weight: 700;
   text-align: center;
@@ -400,7 +402,7 @@ padding-bottom: 30px;
   background-color: var(--white-color);
   border-radius: 50%;
 
-  transition: background-colour var(--animation);
+  transition: background-color var(--animation);
 
 }
 
@@ -525,7 +527,8 @@ transition: fill var(--animation);
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 24px;
+  padding-right: 24px;
+  padding-left: 24px;
   
   background-color: var(--overlay-cl);
 
@@ -700,7 +703,11 @@ background-color: var(--accent-color);
   width: 100%;
   height: 100%;
 
+  opacity: 1;
+
   background-color: var(--modal-bg-color);
+
+  transition: opacity var(--animation);
 
 }
 
@@ -714,7 +721,7 @@ background-color: var(--accent-color);
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1);
 
   width: 528px;
   height: 581px;
@@ -722,6 +729,8 @@ background-color: var(--accent-color);
   background-color: var(--white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+
+  transition:  transform var(--animation );
 }
 
 .modal-btn{
